// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`栅格系统 响应式 1`] = `
<Row
  gutter={0}
>
  <div
    className="xl-row"
  >
    <Col
      span={
        Object {
          "lg": 6,
          "md": 4,
        }
      }
    >
      <div
        className="xl-col xl-col-span-md-4 xl-col-span-lg-6"
      >
        Col1
      </div>
    </Col>
    <Col
      span={
        Object {
          "lg": 6,
          "md": 5,
        }
      }
    >
      <div
        className="xl-col xl-col-span-md-5 xl-col-span-lg-6"
      >
        Col2
      </div>
    </Col>
    <Col
      span={
        Object {
          "lg": 6,
          "md": 7,
        }
      }
    >
      <div
        className="xl-col xl-col-span-md-7 xl-col-span-lg-6"
      >
        Col3
      </div>
    </Col>
    <Col
      span={
        Object {
          "lg": 6,
          "md": 8,
        }
      }
    >
      <div
        className="xl-col xl-col-span-md-8 xl-col-span-lg-6"
      >
        Col4
      </div>
    </Col>
  </div>
</Row>
`;

exports[`栅格系统 基本用法 1`] = `
<Row
  gutter={0}
>
  <div
    className="xl-row"
  >
    <Col
      span={4}
    >
      <div
        className="xl-col xl-col-span-4"
      >
        Col1
      </div>
    </Col>
    <Col
      span={5}
    >
      <div
        className="xl-col xl-col-span-5"
      >
        Col2
      </div>
    </Col>
    <Col
      span={7}
    >
      <div
        className="xl-col xl-col-span-7"
      >
        Col3
      </div>
    </Col>
    <Col
      span={8}
    >
      <div
        className="xl-col xl-col-span-8"
      >
        Col4
      </div>
    </Col>
  </div>
</Row>
`;
